Move root-url and access-token file to data directory